# auto-dev-agents

./: .gitignore  README.md  prompt.yaml  pyproject.toml
src/auto_dev_agents/: main.py
src/auto_dev_agents/config/: agents.yaml  tasks.yaml
