[project]
name = "auto_dev_agents"
version = "0.1.0"
description = "auto_dev_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "tools>=1.0.2",
]

[project.scripts]
auto_dev_agents = "auto_dev_agents.main:run"
run_crew = "auto_dev_agents.main:run"
train = "auto_dev_agents.main:train"
replay = "auto_dev_agents.main:replay"
test = "auto_dev_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
